--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ jobs:
 
     steps:
     - name: Checkout code
-      uses: action/checkout@v2 # clones repo to runner
+      uses: actions/checkout@v2 # clones repo to runner
 
     - name: Set up Python
       uses: actions/setup-python@v2
