--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ jobs:
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v2 # clones repo to runner
+      uses: actions/checkout@v3 # clones repo to runner
 
     - name: Set up Python
       uses: actions/setup-python@v2
@@ -35,12 +35,12 @@ jobs:
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
 
     - name: Set up docker
-      uses: docker-practice/actions-setup-docker@v1
-      with:
-        docker_version: '20.10.7'
+      uses: docker/setup-docker-action@v4.1.0
+      # with:
+      #   docker_version: '20.10.7'
 
     - name: Build docker image
       run: docker build -f Dockerfile -t myapp:latest .
