--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,7 +49,7 @@ jobs:
       run: |
         curl -fsSL https://raw.githubusercontent.com/docker/scout-cli/main/install.sh -o install-scout.sh
         sh install-scout.sh
-        echo "${{ secret.DOCKER_PWD }}" | docker login -u ${{ secret.DOCKER_USER }} --password-stdin
+        echo "${{ secrets.DOCKER_PWD }}" | docker login -u ${{ secrets.DOCKER_USER }} --password-stdin
         docker scout quickview
         docker scout cves
       
